--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body{
     background-color: #fffbf7;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 h1 {
@@ -11,7 +11,7 @@ h1 {
   }
 
 .header{
-    margin: 40px 20px;
+    margin: 40px 20px 0;
     font-size: 0;
 }
 
@@ -36,29 +36,37 @@ h1 {
     width: 70%;
     color: #025157;
     font-weight: 500;
-    text-align: center;
+    text-align: left;
 }
 
-.navBar il a{
+.navBar li a{
     margin-left: 8px;
     text-decoration: none;
     color:#025157;
     
 }
 
-.navBar il a:hover{
+.navBar li a:hover{
     color: #3d3c3c;
 }
 
-.navBar il a:active{
+.navBar li a:active{
     color: #020202;
 }
 
+li {
+    display: inline;
+}
+
+.actions {
+    text-align: left;
+}
  .actions > a {
     color:#67b54b;
     font-size: 14px;
     margin-right: 10px;
-    margin-left: 10px;  
+    margin-left: 10px;
+    text-decoration: none;  
 }  
 
 .actions > a:hover {
