--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,7 @@ h1 {
     vertical-align: middle;
     height : 45px;
     margin : 5px 20px 0;
+    padding:0;
 }
 
 .navBar li a{
@@ -104,14 +105,14 @@ li {
     display:flex;
 }
 
-.signUpForm button,input{
+button,input{
     padding:6px 20px;
     border-width: 1px;
     border-radius: 8px;
 }
 
 
-.signUpForm button{
+button{
     background-color:#025157;
     color:#fff;
     margin-left:-10px;
@@ -120,6 +121,13 @@ li {
     border-bottom-left-radius: 0;
     padding: 7px 20px;
     cursor: pointer;
+}
+
+.generalButton {
+    background-color:#025157;
+    color:#fff;
+    border-radius: 8px;
+    margin: 0;
 }
 
 #greenButton {
@@ -169,7 +177,6 @@ input{
 .video{
     display:flex;
     flex-direction: column;
-    align-items: center;
 }
 
 .video img {
@@ -177,7 +184,10 @@ input{
     margin-top: 10px;
 }
 
-.publish h3 {
+.publish{
+    margin-left: 40px;
+}
+.publish h3, .success-stories h3  {
     font-size: 40px;
     line-height: 48px;
 }
@@ -194,3 +204,105 @@ input{
     margin-right: 18px;
   }
 
+.stories-overview{
+    display:flex;
+    width:70%;
+    padding: 15% 15%;
+    justify-content: space-around;
+    background-color:#a1d683;
+    height: 600px;
+}
+
+.success-stories{
+    display:flex;
+    flex-direction: column; 
+    width:60%;
+    margin-top: 0;
+
+}
+
+.study-case{
+    display: flex;
+    flex-direction: column;
+    margin-left:20px;
+    margin-top:0;
+    padding-top: 0;
+    width:25%;
+    background-color: #fffbf7;
+    border-radius: 7px;
+}
+
+
+.carousel {
+    position:relative;
+    background-color: #fffbf7;
+
+}
+
+.carousel > ul {
+    margin:0;
+    padding:0;
+    list-style: none;
+    
+}
+
+.slide {
+    position:absolute;
+    opacity:0;
+}
+
+.slide[data-active]{
+    opacity:1;
+}
+
+.carousel-button{
+    position:absolute;
+    z-index: 2;
+    background:none;
+    border: none;
+    font-size:1rem;
+    color: rgba(255, 255, 255, .5);
+    cursor:pointer;
+    border-radius: .25rem;
+    padding: 0 .3rem;
+    background-color: rgba(0, 0, 0, .1);
+}
+
+.carousel-button:hover, .carousel-button:focus{
+color:white;
+background-color: rgba(0, 0, 0, .2);
+}
+
+.carousel-button:focus{
+    outline: 1px solid black;
+}
+
+.carousel-button.prev{
+    left:5rem;
+    top: 35rem;
+}
+
+.carousel-button.next{
+    right:5rem;
+    top: 35rem;
+}
+
+.carousel > ul {
+    margin:0;
+    padding:0;
+    list-style: none;
+    border:none;
+}
+
+figure > img {
+width:300px;
+}
+
+.slide > img{
+    width:100%;
+    border-radius: 8px 8px 0 0 ;
+}
+
+li h3,h2{
+    margin:5px ;
+}
