--- a/styles.css
+++ b/styles.css
@@ -431,3 +431,85 @@ text-align: center;
 .hiw-card a {
     margin: 5px;
 }
+
+/**responsive design CSS*/
+
+@media (max-width:575px) {
+    .navBar,
+    .actions{
+    display:none;
+    }
+
+    h1 {
+        font-size: 2rem; /*Considering 16px as the default rem value*/
+    }
+
+    .main {
+       margin-top: 160px ;
+    }
+
+    /*section promo, this is not really needed*/
+    .banner img {
+        width:100%
+    }
+
+    .publish > form {
+    flex-direction: column;
+  }
+
+  .publish > form > div {
+    height: 50px;
+    margin-top: 10px;
+  }
+
+  .publish > form > div > input {
+    width: 65%;
+  }
+
+  .publish > form > div > button {
+    background-color:#025157;
+    color:#fff;
+    border-radius: 8px;
+    margin: 2px;
+  }
+
+
+  /*Section features*/
+  .features{
+    /*here we are specifying to have 4 rows with the same fraction, and only one column*/
+    grid-template: repeat(4, 1fr) / 1fr;
+    grid-auto-rows: minmax(300px, auto);
+
+  }
+  
+  .feature-card{
+    flex-flow: row wrap;
+    margin:20px;
+  }
+
+  .img-feature-card-right{
+    display: none;
+  }
+
+}
+
+@media (min-width: 576px) and (max-width:767px) {
+    body {
+        background-color: lightgreen;
+    }
+    
+}
+
+@media (min-width: 768px) and (max-width:991px) {
+    body {
+        background-color: lightsalmon;
+    }
+    
+}
+
+@media (min-width: 992px) and (max-width:1080px) {
+    body {
+        background-color: lightyellow;
+    }
+    
+}
