--- a/styles.css
+++ b/styles.css
@@ -155,6 +155,10 @@ margin-left: 1rem;
     margin: 0;
 }
 
+.carousel-item > .generalButton {
+    margin: 0 6% 0 6%;
+}
+
 #greenButton {
     background-color: #67b54b;
     color: #fff;
@@ -239,26 +243,80 @@ input{
     display:flex;
     width:100%;
     padding: 3% 3%;
-    justify-content: space-around;
     background-color:#a1d683;
     height: 950px;
-}
-
-.carousel{
-    display: flex;
-    width:30%;
-    flex-direction: column;
-    background-color: #fffbf7;
-    border-radius: 8px 8px 8px 8px ;
 }
 
 .success-stories{
     display:flex;
     flex-direction: column; 
     width:50%;
-    justify-content: space-around;
+}
+
+.stories-carousel{
+    width:50%;
+    display: flex;
+    
+}
+
+
+.carousel{
+    display: flex;
+    width:35%;
+    background-color: #fffbf7;
+    border-radius: 9px 9px 9px 9px ;
+}
+/*Yellow logo company name in carousel*/
+.carousel-item > .card > .company-logo{
+    position: absolute;
+    top: 210px;
+    right:5px;
+    width:100px;
+    height: 100px;
+    background-color: #f9da73;
+    border-radius: 50%;
+    display:flex;
+    justify-content: center;
+    align-items: center;
 
 }
+
+.carousel-item > .card > .company-logo > img{
+    width:70px;
+
+}
+
+.card-body{
+    margin: 50px 0 50px 0;
+}
+
+.card-footer{
+   border-top: none;
+   background-color: #fffbf7;
+}
+
+.results{
+    display:flex;
+    margin-top:20px;
+}
+
+/*shopping cart logo in carousel*/
+.results > #logo-card{
+    width:15%;
+    height:15%;
+    margin-right:10px;
+    align-self: center;
+
+}
+
+.carousel-item > h3{
+    padding-top:50px;
+}
+
+.card-img-top {
+    height: 250px;
+}
+
 
 /*
 .success-stories{
@@ -575,20 +633,28 @@ text-align: center;
   .stories-overview{
     flex-direction: column;
     width:100%;
-    height:auto;
+    height: auto;
   
+  }
+
+  .stories-carousel{
+    width: 99%;
+    justify-content: center;
   }
 
   .success-stories{
     width:100%;
-    justify-content: space-around;
-
   }
 
   .carousel {
     width:100%;
+    margin-top:10px;
+    height:auto;
   }
 
+  .carousel-item > .card{
+    width:100%;
+  }
 
   /*Section How it works*/
 
