--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -1,15 +1,16 @@
-/** _global.scss */
+/** _global.scss **/
 $dark-green-title: #025157;
 $dark-green-text: #135359;
 $white: #ffffff;
 $green: #67b54b;
 $gray: #979797;
 $dark-gray:#4a4a4a;
+$bc-green: #96d178;
 
 /**Fonts**/
 $font-title: 'Yanone Kaffeesatz', sans-serif;
 
-/** placeholders */
+/** placeholders **/
 %base-title {
     font-family: $font-title;
     color: $dark-green-text;
