--- a/scss/main.scss
+++ b/scss/main.scss
@@ -111,3 +111,11 @@ $card-spacer-x: 2px;
       color: #b3cbcd;
     }
   }
+
+  .input-group .general-signup:hover {
+    background-color: $green;
+  }
+
+  .generalButton:hover {
+    background-color: $green;
+  }
